Fix invalid Docker tag format

--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -26,5 +26,5 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/my-docker-repo:latest
+          tags: ${{ secrets.abdogom22 }}/my-docker-repo:latest
 
